--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
-<!doctype html><html><head><meta charset="utf-8"><title>Storybook</title><style>html, body {
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><title>Storybook</title><meta name="viewport" content="width=device-width,initial-scale=1"/><style>html, body {
     overflow: hidden;
     height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
-  }</style><script>try {
-    if (window.parent !== window) {
-      window.__REACT_DEVTOOLS_GLOBAL_HOOK__ = window.parent.__REACT_DEVTOOLS_GLOBAL_HOOK__;
-      window.__VUE_DEVTOOLS_GLOBAL_HOOK__ = window.parent.__VUE_DEVTOOLS_GLOBAL_HOOK__;
+  }</style><script>/* globals window */
+  /* eslint-disable no-underscore-dangle */
+  try {
+    if (window.top !== window) {
+      window.__REACT_DEVTOOLS_GLOBAL_HOOK__ = window.top.__REACT_DEVTOOLS_GLOBAL_HOOK__;
     }
   } catch (e) {
-    console.warn('unable to connect to parent frame for connecting dev tools');
+    // eslint-disable-next-line no-console
+    console.warn('unable to connect to top frame for connecting dev tools');
   }</script><script>// hackcode stroybook no support
-  document.title = 'RC-FOOTER';</script><link rel="icon" type="image/png" href="https://gw.alipayobjects.com/zos/rmsportal/rlpTLlbMzTNYuZGGCVYM.png"></head><body><div id="root"></div><script src="./sb_dll/storybook_ui_dll.js"></script><script src="runtime~main.4d6118575687c0a0f1fb.bundle.js"></script><script src="vendors~main.aecabc13423aa6522836.bundle.js"></script><script src="main.0f723ef30400ec19fed4.bundle.js"></script></body></html>
+  document.title = 'RC-FOOTER';</script><link rel="icon" type="image/png" href="https://gw.alipayobjects.com/zos/rmsportal/rlpTLlbMzTNYuZGGCVYM.png"/><style>#root[hidden],
+      #docs-root[hidden] {
+        display: none !important;
+      }</style></head><body><div id="root"></div><div id="docs-root"></div><script></script><script src="runtime~main.72c61344ec336373a1bf.bundle.js"></script><script src="vendors~main.f2bcccb2180c680e2419.bundle.js"></script><script src="main.4a13dedc65d4b0728c72.bundle.js"></script></body></html>
