--- a/changelog/index.html
+++ b/changelog/index.html
@@ -34,7 +34,7 @@
         );
       })();
     </script>
-    <title>rc-footer</title>
+    <title>Changelog</title>
   </head>
   <body>
     <div id="root"></div>
