--- a/demo/rows/index.html
+++ b/demo/rows/index.html
@@ -34,7 +34,7 @@
         );
       })();
     </script>
-    <title>rc-footer</title>
+    <title>rows</title>
   </head>
   <body>
     <div id="root"></div>
