--- a/demo/simple/index.html
+++ b/demo/simple/index.html
@@ -34,7 +34,7 @@
         );
       })();
     </script>
-    <title>rc-footer</title>
+    <title>simple</title>
   </head>
   <body>
     <div id="root"></div>
