--- a/demo/simple/index.html
+++ b/demo/simple/index.html
@@ -9,19 +9,19 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="https://avatars0.githubusercontent.com/u/9441414?s=200&v=4"
+      href="https://avatars0.githubusercontent.com/u/9441414?s=200&amp;v=4"
     />
     <style>
       .markdown table {
         width: auto !important;
       }
     </style>
-    <link rel="stylesheet" href="/umi.css" />
+    <link rel="stylesheet" href="/footer/umi.373ac3c8.css" />
     <script>
-      window.routerBase = "/";
+      window.routerBase = "/footer/";
     </script>
     <script>
-      //! umi version: 3.3.9
+      //! umi version: 3.5.20
     </script>
     <script>
       !(function () {
@@ -30,15 +30,15 @@
           r = ["light", "dark", "auto"];
         document.documentElement.setAttribute(
           "data-prefers-color",
-          e === r[2] ? (t ? r[1] : r[0]) : r.includes(e) ? e : r[0]
+          e === r[2] ? (t ? r[1] : r[0]) : r.indexOf(e) > -1 ? e : r[0]
         );
       })();
     </script>
-    <title>simple</title>
+    <title>simple - rc-footer</title>
   </head>
   <body>
     <div id="root"></div>
 
-    <script src="/umi.js"></script>
+    <script src="/footer/umi.9fe41a64.js"></script>
   </body>
 </html>
