--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
         width: auto !important;
       }
     </style>
-    <link rel="stylesheet" href="/footer/umi.373ac3c8.css" />
+    <link rel="stylesheet" href="/footer/umi.f7cb95ed.css" />
     <script>
       window.routerBase = "/footer/";
     </script>
@@ -34,11 +34,11 @@
         );
       })();
     </script>
-    <title>rc-footer</title>
+    <title>rc-footer - rc-footer</title>
   </head>
   <body>
     <div id="root"></div>
 
-    <script src="/footer/umi.9fe41a64.js"></script>
+    <script src="/footer/umi.71094d5e.js"></script>
   </body>
 </html>
